--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,137 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 .App {
+  font-family: 'Roboto', sans-serif;
   text-align: center;
+  border: 1px solid #71C8E2;
+  background-color: #71C8E2;
+  width: 100%;
+  max-width: 500px;
+  border-radius: 20px;
+  height: auto;
+  margin: 100px auto;
+  min-height: 250px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+h1 {
+  color: #FFF;
+  font-weight: 700;
+}
+
+p {
+  color: #FFF;
+  font-weight: 400;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  text-align: left;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 6px 12px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  width: 315px;
+  height: 50px;
+}
+
+input:focus {
+  border: 1px solid #FAC5DE;
+  outline: none;
+  color: rgb(47, 47, 47);
+}
+
+.button-add {
+  background-color: #FAC5DE;
+  color: #FFF;
+  font-size: 40px;
+  border-radius: 10px;
+  width: 50px;
+  border: none;
+  cursor: pointer;
+}
+
+.button-add:hover {background-color: #f1accc}
+
+.button-add:active {
+  background-color: #f1accc;
+  box-shadow: 0 1px rgb(200, 199, 199);
+  transform: translateY(2px);
+}
+
+.button-x{
+  font-size: 20px;
+  margin-left: 5px;
+  color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button-done {
+  align-items: center;
+  font-size: 25px;
+  padding-top: 5px;
+  margin-left: 5px;
+  color: rgb(47, 47, 47);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.clear-button {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background: #FAC5DE;
+  font-size: 20px;
+  font-weight: 800;
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 370px;
+  height: 30px;
+}
+
+.clear-button:hover {background-color: #f1accc}
+
+.clear-button:active {
+  background-color: #f1accc;
+  box-shadow: 0 1px rgb(200, 199, 199);
+  transform: translateY(2px);
+}
+
+.task-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px auto;
+  padding: 0 7px 5px 7px;
+  list-style: none;
+  font-size: 25px;
+  border: 1px solid rgb(200, 199, 199);
+  border: none;
+  border-radius: 5px;
+  width: 350px;
+  background: #F4F8F8;
+  box-shadow: rgba(0, 0, 0, 0.10) 1.95px 1.95px 2.6px;
+  color: rgb(47, 47, 47);
+  font-weight: 300;
+  font-size: 24px;
+}
+
+button {
+  margin-left: 5px;
+}
+
+.task-done{
+  text-decoration: line-through;
 }
 
 .App-logo {
